# dispatch

./: .coveragerc  .dockerignore  .editorconfig  .env.bak  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .travis.yml  404.html  DYNAMIC_VERSIONING.md  MANIFEST.in  MIGRATION_TO_UV.md  README.md  SUMMARY.md  Setupfixed.py  airtable_output.json  dispatch-data-only.dump  docker-compose.yml  index.html  markdown-page.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements-metrics.txt  search-index-default.json  search-index-docs-default-current.json  security.md  setup.cfg  (+3 more)
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CODEOWNERS  codeql-analysis.yml  dependabot-auto-merge.yml  dependabot.yml  deploy-docs-test.yml  deploy-docs.yml  enforce-labels.yml  javascript.yml  lint-migrations.yml  list_and_test.yml  playwright.yml  publish-image-test.yml  publish-image.yml  python.yml  stale.yml
assets/css/: styles.0469e29e.css  styles.0fbde2f3.css  styles.2bc0b613.css  styles.6add3356.css  styles.8dd38993.css
assets/js/: 0032b1bc.91b480dd.js  0032b1bc.b70d6890.js  01b9ad1c.6ae8a5ea.js  01b9ad1c.9dc5e678.js  01b9ad1c.aed86f3a.js  058fb814.5d8be788.js  058fb814.6f24e1dc.js  058fb814.ae458009.js  058fb814.c12f742d.js  058fb814.cb703a3e.js  058fb814.f64d407d.js  06155b1f.6ac8a7f7.js  06155b1f.7cb14526.js  0694dffa.4f0de370.js  0694dffa.70e3f8c0.js  07f7012d.14c613c2.js  07f7012d.2db507ba.js  07f7012d.64d03c82.js  0c7de5a1.0357adc4.js  0c7de5a1.1e126f32.js  0c7de5a1.42d82d05.js  0cc96c90.8bc5c7a0.js  0cc96c90.aba23c7d.js  0cc96c90.c29b4078.js  0cc96c90.e3556f84.js  0dd4b245.89afd338.js  0dd4b245.d943a142.js  0dd4b245.f3dd6dcc.js  113be290.6f089778.js  113be290.790b20c0.js  113be290.803922df.js  113be290.fa12e35d.js  1173761d.6aa9afe4.js  1173761d.98b4e1ef.js  1173761d.a21018e0.js  1220ddb3.2ce27bdf.js  1220ddb3.bd3bbab7.js  13292c20.5e17826f.js  13292c20.7f4324b5.js  13292c20.f99b09b7.js  (+557 more)
configuration/plugins/: pagerduty.md
data/: .env  dispatch-sample-data.dump  update-example-data.sh
docker/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: README.md  SUMMARY.md  administration.html  changelog.html  changelog.md  cli.md  command-line-interface.md  configuration.md  development.md  docusaurus.config.js  faq.md  installation.md  license.html  license.md  package-lock.json  package.json  security.md  sidebars.js  summary.md  support.html  tags.html  upgrading.md  user-guide.html
docs/admin-guide/: README.md  cli.md
docs/administration/: api.html  case.html  cli.html  contact.html  contributing.html  data.html  faq.html  incident.html  installation.html  introduction.html  knowledge.html  plugins.html  project.html  security.html  server.html  settings.html  templates.html  upgrading.html  user.html
docs/branding/: FullColor_1280x1024.eps
docs/configuration/: README.md  app.md  configuration.md
docs/contributing/: README.md  core.html  core.md  environment.html  environment.md  introduction.html  plugins.html
docs/docs/: changelog.mdx  installation.mdx  support.mdx
docs/scripts/: generate_api_schema.py  openapi.yaml
docs/tags/: getting-started.html
docs/user-guide/: README.md  case.html  cases.html  cost_model.html  dashboard.html  dashboard.md  data.html  data.md  feedback.html  feedback.md  incident-commander.html  incident-commander.md  incident-participant.html  incident-participant.md  incident.html  incident.md  incidents.html  introduction.html  task.md  tasks.html  tasks.md
py_venv/: pyvenv.cfg
redocusaurus/: plugin-redoc-0.yaml
scripts/: compile-requirements.sh  verify-uv-setup.sh
src/dispatch/: __init__.py  alembic.ini  api.py  cli.py  config.py  database.py  decorators.py  enums.py  exceptions.py  export.py  extensions.py  logging.py  main.py  messaging.py  metrics.py  models.py  nlp.py  rate_limiter.py  run.py  scheduler.py  settings.py  types.py  utils.py
tests/: conftest.py  database.py  factories.py  test_route_service.py
tests/ai/: __init__.py  test_ai_service.py
tests/api/: test_schema.py
tests/case/: test_case_event_views.py  test_case_messaging.py  test_case_service.py  test_case_views.py
tests/case_cost/: test_case_cost_service.py
tests/case_cost_type/: test_case_cost_type_service.py
tests/case_type/: test_case_type_service.py
tests/conference/: test_conference_service.py
tests/conversation/: test_conversation_service.py
tests/cost_model/: test_cost_model_service.py
tests/database/: test_auditing.py  test_duplicate_joins.py  test_duplicate_table_alias.py  test_service.py  test_sort_by_tag_type.py
tests/dispatch_google_docs/: test_dispatch_google_docs.py
tests/dispatch_incidentio/: test_incident_io_plugin.py
tests/document/: test_document_service.py
tests/e2e/: report-submission.spec.ts
tests/entity/: test_entity_service.py
tests/entity_type/: test_entity_type_service.py
tests/event/: test_event_service.py
tests/feedback/: test_feedback_cases.py  test_feedback_oncall.py  test_feedback_service.py
tests/group/: test_group_service.py
tests/incident/: test_incident_flows.py  test_incident_service.py
tests/incident_cost/: test_incident_cost_service.py
tests/incident_cost_model/: test_incident_cost_model_service.py
tests/incident_cost_type/: test_incident_cost_type_service.py
tests/incident_participant_activity/: test_incident_participant_activity_service.py
tests/incident_priority/: test_incident_priority_service.py
tests/incident_role/: test_incident_role_service.py
tests/incident_severity/: test_incident_severity_service.py
tests/incident_type/: test_incident_type_service.py
tests/individual/: test_individual_service.py
tests/individual_contact/: test_individual_contact_service.py
utils/: github_utils.py  release_notes.py
(+2068 files in other folders)
